--- a/client/styles/_sidebar.scss
+++ b/client/styles/_sidebar.scss
@@ -2,7 +2,7 @@
 
 .sidebar {
   transition: all .15s;
-  top: 58px;
+  top: 57px;
   background: $black;
   height: calc(100%-58px);
 }
